# pelagos-py

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  api_reference.html  contributing.html  developer_guide.html  development.html  environment.yaml  genindex.html  getting_started.html  index.html  objects.inv  pipeline_visualisation  py-modindex.html  pyproject.toml  quality_control.html  requirements.txt  search.html  searchindex.js  steps.html  tests.html  user_guide.html
.doctrees/: api_reference.doctree  codeautolink-cache.json  contributing.doctree  developer_guide.doctree  development.doctree  getting_started.doctree  index.doctree  quality_control.doctree  steps.doctree  tests.doctree  user_guide.doctree
_modules/: index.html
_sources/: api_reference.rst.txt  contributing.rst.txt  developer_guide.md.txt  development.rst.txt  getting_started.rst.txt  index.rst.txt  quality_control.rst.txt  steps.rst.txt  tests.rst.txt  user_guide.rst.txt
_static/: custom.css
api/: index.html
dashboard/: app.py  default_pipeline.yaml  index.html  pipeline_config.yaml  plot_view.js  steps.js
docs/: conf.py  contributing.rst  development.rst  getting_started.rst  index.rst  quality_control.rst  steps.rst  user_guide.rst
tests/: skip_test_impossible_speed_qc.py  test_apply_qc.py  test_chla_quenching.py  test_correct_values.py  test_ctd_qc.py  test_deep_correction.py  test_find_profiles.py  test_flag_full_profile.py  test_format_checker.py  test_import_export.py  test_impossible_date_qc.py  test_impossible_location_qc.py  test_impossible_speed_qc.py  test_pipeline_integration.py  test_position_on_land_qc.py  test_qc_parameters.py  test_range_qc.py  test_valid_profile_qc.py  (+2 more)
(+643 files in other folders)
