[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "Pelagos-py"
description = "Python interface for ERDDAP"
readme = "README.md"
maintainers = [
  { name = "Daniel Bangay", email = "Daniel.Bangay@noc.ac.uk" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://noc-obg-autonomy.github.io/toolbox/"
urls.homepage = "https://github.com/NOC-OBG-Autonomy/toolbox"
urls.repository = "https://github.com/NOC-OBG-Autonomy/toolbox"


[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
write_to = "src/toolbox/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "examples",
  "examples/*",
]


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 85
exclude = [
  "docs",
  "tests",
]
verbose = 1
quiet = false
color = true

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
